// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-cmthru kPFToU"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-gJWqzi ydqSI fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-eXEjpC kPoZdn"
  >
    <div
      class="sc-ibxdXY cmogeK"
    >
      <div
        class="sc-RefOD kIvrQw"
      >
        <div
          class="sc-eTuwsz sc-hXRMBi jQDnzF"
        >
          ERROR
        </div>
        <h4
          class="sc-cMhqgX bMiDFV"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-iQKALj ftJWrM"
      >
        <pre
          class="sc-esOvli bhyhQA"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-hrWEMg ghWcTV"
      >
        <a
          class="sc-bwCtUz knprsc"
        >
          <i
            class="sc-fhYwyz iajfCW fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-eXEjpC kPoZdn"
  >
    <div
      class="sc-ibxdXY cmogeK"
    >
      <div
        class="sc-RefOD kIvrQw"
      >
        <div
          class="sc-eTuwsz sc-hXRMBi jQDnzF"
        >
          ERROR
        </div>
        <h4
          class="sc-cMhqgX bMiDFV"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-iQKALj ftJWrM"
      >
        <pre
          class="sc-esOvli bhyhQA"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
